--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,41 @@
-.App {
+#page {
+  display: grid;
+  margin: 1vh 1vw;
+  width: 98vw;
+  height: 98vh;
+  grid-template-areas: "head"
+                        "main"
+                        "foot";
+  grid-template-rows: 1fr 10fr 1fr;
+  grid-template-columns: 1fr;
+
+}
+
+#page > header {
+  grid-area: head;
+  background-color: #8ca0ff;
+  margin-bottom: 1vh;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#page > main {
+  display: grid;
+  grid-area: main;
+  background-color: #ffa08c;
+  margin-bottom: 1vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#page > main > span.square {
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#page > footer {
+  grid-area: foot;
+  background-color: #ffff64;
+  text-align: center
 }
